Refactor: Implement insertNewNode and findSpanNode functions
Implement the insertNewNode function to insert a new node container after the focused node's parent span node, and implement the findSpanNode function to recursively find the first HTMLElement node with specific class names.

Changes:
- Added insertNewNode function to insert a new node container after the parent span node of the focused node.
- Added findSpanNode function to recursively find the first HTMLElement node with class names 'nodeText 0', 'element', or 'elementNull'.

--- a/src/app/header-editor/header-editor.component.html
+++ b/src/app/header-editor/header-editor.component.html
@@ -33,7 +33,7 @@
       </label>
     </div>
     <div class="button-list">
-      <input (click)="setList()" id="input-img" type="checkbox" src="assets/img/list.svg" alt="List" id=button-list>
+      <input (click)="setBulletedList()" id="input-img" type="checkbox" src="assets/img/list.svg" alt="List" id=button-list>
       <label for="button-list">
         <img src="assets/img/list.svg" alt="List">
       </label>
